Babel-preset-env builds in Razzle. .babelrc features template demo config for demo purposes.

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
     "presets": [
-        "razzle"
+        ["env", {
+            "targets": {
+                "browsers": ["last 2 versions", "ie 8"]
+            }
+        }], ["razzle"]
     ]
 }
