--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,20 @@
 {
     "presets": [
         ["env", {
+            "useBuiltIns": true,
             "targets": {
-                "browsers": ["last 2 versions", "ie 8"]
+                "browsers": [
+                    "chrome >= 53",
+                    "firefox >= 45.0",
+                    "ie >= 11",
+                    "edge >= 37",
+                    "safari >= 9",
+                    "opera >= 40",
+                    "op_mini >= 18",
+                    "Android >= 7",
+                    "and_chr >= 53",
+                    "and_ff >= 49",
+                    "ios_saf >= 10"]
             }
         }], ["razzle"]
     ]
