--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "homepage": "https://github.com/bbc/simorgh#readme",
   "dependencies": {
     "@jaredpalmer/after": "^1.3.1",
+    "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
