security: pin eslint-scope to version 3.7.1 due to higher versions being compromised

--- a/package.json
+++ b/package.json
@@ -82,6 +82,9 @@
     "swagger-cli": "^2.1.0",
     "webpack-bundle-analyzer": "^2.13.1"
   },
+  "resolutions": {
+    "eslint-scope": "3.7.1"
+  },
   "jest": {
     "collectCoverageFrom": [
       "**/src/**/*.{js,jsx}",
