Added entry for babel-polyfill in .babelrc. Might fix CI build that's failing.

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": [
         ["env", {
+            "entry": ["babel-polyfill", "./src/client.js"],
             "useBuiltIns": true,
             "targets": {
                 "browsers": [
