--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simorgh",
   "main": "index.js",
   "scripts": {
+    "bbc-a11y": "bbc-a11y",
     "build": "razzle build",
     "cypress": "cypress run",
     "cypress:interactive": "cypress open",
@@ -11,7 +12,7 @@
     "cypress:storybook:interactive": "cypress open --project ./.storybook/.",
     "data-validate": "node src/app/datavalidator/datavalidator.js",
     "dev": "razzle start",
-    "lighthouse": "lighthouse http://localhost:7080/article/id --output-path=./reports/report.html --view",
+    "lighthouse": "lighthouse http://localhost:7080/article/scenario-01 --output-path=./reports/report.html --view",
     "postmerge": "./scripts/dependencyUpdateCheck.sh",
     "precommit": "npm run test:lint",
     "prepush": "./scripts/upToDateWithLatest.sh && npm run test:unit",
@@ -19,6 +20,8 @@
     "start": "NODE_ENV=production node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "npm run test:lint && npm run test:unit",
+    "test:accessibility": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start bbc-a11y",
+    "test:accessibility:ci": "npm run build && run-p --race start bbc-a11y",
     "test:e2e": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start cypress",
     "test:e2e:ci": "npm run build && run-p --race start cypress",
     "test:e2e:interactive": "(lsof -t -i:7080 | xargs kill) && npm run build && run-p --race start cypress:interactive",
@@ -64,6 +67,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.4",
+    "bbc-a11y": "^2.1.0",
     "cypress": "^3.0.2",
     "eslint": "^5.0.1",
     "eslint-config-airbnb": "^17.0.0",
