Removed stage-0 from .babelrc

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
     "presets": [
-        "razzle/babel",
-        "stage-0", ["env", {
+        "razzle/babel", ["env", {
             "useBuiltIns": true,
             "targets": {
                 "browsers": [
