--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
         - ./cc-test-reporter before-build
       script:
        - npm run test
-       - npm run test:accessibility:ci
+       - xvfb-run npm run test:accessibility:ci
       after_script: ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
     - stage: test
       script: xvfb-run npm run test:e2e:ci
