--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "supertest": "^3.1.0",
     "swagger-cli": "^2.1.0",
     "webpack-bundle-analyzer": "^2.13.1",
+    "workbox-webpack-plugin": "^3.4.1",
     "yaml-js": "^0.2.3"
   },
   "jest": {
