--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Simorgh",
-  "short_name": "Simorgh",
+  "name": "BBC News",
+  "short_name": "BBC News",
   "Scope": "/",
-  "background_color": "#bb1919",
+  "background_color": "#b80000",
   "display": "browser",
   "start_url": "/",
-  "theme_color": "#bb1919",
+  "theme_color": "#b80000",
   "icons": [
     {
       "src": "images/icons/icon-72x72.png",
