--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "react-router-dom": "^4.3.1",
     "speculate": "^1.7.4",
     "styled-components": "3.1.6",
-    "styled-normalize": "^8.0.0"
+    "styled-normalize": "^8.0.0",
+    "workbox-webpack-plugin": "^3.4.1"
   },
   "devDependencies": {
     "@storybook/react": "4.0.0-alpha.8",
@@ -89,7 +90,6 @@
     "supertest": "^3.1.0",
     "swagger-cli": "^2.1.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "workbox-webpack-plugin": "^3.4.1",
     "yaml-js": "^0.2.3"
   },
   "jest": {
