--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
+    "service-worker-mock": "^1.9.2",
     "speculate": "^1.7.4",
     "styled-components": "3.1.6",
     "styled-normalize": "^8.0.0",
