--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "jest-styled-components": "^5.0.1",
     "lighthouse": "^3.0.0",
     "npm-run-all": "^4.1.3",
-    "prettier": "1.14.0",
+    "prettier": "^1.14.0",
     "react-test-renderer": "^16.4.1",
     "supertest": "^3.1.0",
     "swagger-cli": "^2.1.0",
