--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "markdown-to-jsx": "^6.6.8",
+    "offline-plugin": "^5.0.5",
     "prop-types": "^15.6.2",
     "razzle": "^2.2.0",
     "react": "^16.4.1",
