--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "BBC News",
   "Scope": "/",
   "background_color": "#b80000",
-  "display": "browser",
+  "display": "standalone",
   "start_url": "/",
   "theme_color": "#b80000",
   "icons": [
