--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
-  "extends": ["airbnb", "plugin:prettier/recommended"],
+  "extends": [
+    "airbnb",
+    "plugin:prettier/recommended",
+    "plugin:jsx-a11y/recommended"
+  ],
   "env": {
     "es6": true,
     "browser": true,
@@ -14,7 +18,7 @@
       "jsx": true
     }
   },
-  "plugins": ["prettier", "json"],
+  "plugins": ["prettier", "json", "jsx-a11y"],
   "rules": {
     "react/jsx-one-expression-per-line": "off"
   }
