--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "data-validate": "node src/app/dataValidator/index.js",
     "data-validate:debug": "npm run data-validate --DEBUG_MODE=true",
     "dev": "razzle start",
-    "kill": "(lsof -t -i:7080 | xargs kill)",
+    "killApp": "(lsof -t -i:7080 | xargs kill)",
+    "killStorybook": "(lsof -t -i:9001 | xargs kill)",
     "lighthouse": "lighthouse http://localhost:7080/article/scenario-01 --output-path=./reports/report.html --view",
     "postmerge": "./scripts/dependencyUpdateCheck.sh",
     "precommit": "npm run test:lint",
@@ -22,15 +23,15 @@
     "start": "NODE_ENV=production node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "npm run test:lint && npm run test:unit && npm run data-validate",
-    "test:accessibility": "npm run kill && npm run build && run-p --race start bbc-a11y",
+    "test:accessibility": "npm run killApp && npm run build && run-p --race start bbc-a11y",
     "test:accessibility:ci": "npm run build && run-p --race start bbc-a11y",
-    "test:e2e": "npm run kill && npm run build && run-p --race start cypress",
+    "test:e2e": "npm run killApp && npm run build && run-p --race start cypress",
     "test:e2e:ci": "npm run build && run-p --race start cypress",
-    "test:e2e:interactive": "npm run kill && npm run build && run-p --race start cypress:interactive",
-    "test:e2e:storybook": "npm run kill && run-p --race storybook cypress:storybook",
+    "test:e2e:interactive": "npm run killApp && npm run build && run-p --race start cypress:interactive",
+    "test:e2e:storybook": "npm run killStorybook && run-p --race storybook cypress:storybook",
     "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
-    "test:e2e:storybook:interactive": "npm run kill && run-p --race storybook cypress:storybook:interactive",
-    "test:lighthouse": "npm run kill && npm run build && run-p --race start lighthouse",
+    "test:e2e:storybook:interactive": "npm run killStorybook && run-p --race storybook cypress:storybook:interactive",
+    "test:lighthouse": "npm run killApp && npm run build && run-p --race start lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:unit": "razzle test --env=jsdom --coverage",
     "updateShapshots": "npm run test:unit -- -u"
