--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simorgh",
   "main": "index.js",
   "scripts": {
+    "amp:validate": "wait-on http://localhost:7080/ && amphtml-validator http://localhost:7080/article/scenario-25 || true",
     "bbcA11y": "bbc-a11y",
     "build": "razzle build",
     "cypress": "cypress run",
@@ -25,6 +26,7 @@
     "test": "npm run test:lint && npm run test:unit && npm run dataValidate",
     "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
     "test:accessibility:ci": "npm run build && run-p --race start bbcA11y",
+    "test:ampvalidator": "npm run killApp && npm run build && run-p --race start amp:validate",
     "test:e2e": "npm run killApp && npm run build && run-p --race start cypress",
     "test:e2e:ci": "npm run build && run-p --race start cypress",
     "test:e2e:interactive": "npm run killApp && npm run build && run-p --race start cypress:interactive",
@@ -70,6 +72,7 @@
   },
   "devDependencies": {
     "@storybook/react": "4.0.0-alpha.8",
+    "amphtml-validator": "^1.0.23",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.4",
