--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,13 @@ jobs:
         - ./cc-test-reporter before-build
       script:
        - npm run test
+      after_script: 
+       - ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
+    - stage: test
+      script:
        - xvfb-run npm run test:accessibility:ci
-      after_script: ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
-    - stage: test
-      script: xvfb-run npm run test:e2e:ci
-    - stage: test
-      script: xvfb-run npm run test:e2e:storybook:ci
+       - xvfb-run npm run test:e2e:ci
+       - xvfb-run npm run test:e2e:storybook:ci
     - stage: test
       install: npm install --production
       script: npm run build
