--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 cache:
   directories:
-    - ~/.cache
+    - node_modules
+    # - ~/.cache
     - ~/.npm
 before_install: npm install -g npm@latest
 install: 
