--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "amp:validate": "wait-on http://localhost:7080/ && (amphtml-validator http://localhost:7080/news/articles/amp/c0000000025o || true)",
     "bbcA11y": "bbc-a11y",
-    "bbcA11y&cypress": "bbc-a11y && cypress run",
+    "bbcA11yAndCypress": "bbc-a11y && cypress run",
     "build": "razzle build",
     "cypress": "cypress run",
     "cypress:interactive": "cypress open",
@@ -28,7 +28,7 @@
     "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
     "test:accessibility:ci": "npm run build && run-p --race start bbcA11y",
     "test:ampValidate": "npm run killApp && npm run build && run-p --race start amp:validate",
-    "test:bbcA11y&cypress:ci": "run-p --race start bbcA11y&cypress",
+    "test:bbcA11yAndCypress:ci": "run-p --race start bbcA11y&cypress",
     "test:e2e": "npm run killApp && npm run build && run-p --race start cypress",
     "test:e2e:ci": "npm run build && run-p --race start cypress",
     "test:e2e:interactive": "npm run killApp && npm run build && run-p --race start cypress:interactive",
