--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "amp:validate": "wait-on http://localhost:7080/ && (amphtml-validator http://localhost:7080/news/articles/amp/c0000000025o || true)",
     "bbcA11y": "bbc-a11y",
-    "bbcA11yAndCypress": "bbc-a11y && cypress run",
     "build": "razzle build",
     "cypress": "cypress run",
     "cypress:interactive": "cypress open",
@@ -26,11 +25,10 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "npm run test:lint && npm run test:unit && npm run dataValidate",
     "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
-    "test:accessibility:ci": "npm run build && run-p --race start bbcA11y",
+    "test:accessibility:ci": "npm install bbc-a11y && run-p --race start bbcA11y",
     "test:ampValidate": "npm run killApp && npm run build && run-p --race start amp:validate",
-    "test:bbcA11yAndCypress:ci": "run-p --race start bbcA11yAndcypress",
     "test:e2e": "npm run killApp && npm run build && run-p --race start cypress",
-    "test:e2e:ci": "npm run build && run-p --race start cypress",
+    "test:e2e:ci": "npm install cypress && run-p --race start cypress",
     "test:e2e:interactive": "npm run killApp && npm run build && run-p --race start cypress:interactive",
     "test:e2e:storybook": "npm run killStorybook && run-p --race storybook cypress:storybook",
     "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
