--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
+cache:	
+  directories:	
+    - ~/.cache	
+    - ~/.npm
 before_install: npm install -g npm@latest
 jobs:
   include:
