--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "homepage": "https://github.com/bbc/simorgh#readme",
   "dependencies": {
-    "@jaredpalmer/after": "^1.3.1",
+    "@jtart/uni": "0.0.9",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "es6-promise": "^4.2.4",
@@ -65,7 +65,6 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
-    "react-router-dom": "^4.3.1",
     "speculate": "^1.7.4",
     "styled-components": "^3.4.2",
     "styled-normalize": "^8.0.0",
