--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "npm run test:lint && npm run test:unit && npm run dataValidate",
     "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
-    "test:accessibility:ci": "npm install bbc-a11y && run-p --race start bbcA11y",
     "test:ampValidate": "npm run killApp && npm run build && run-p --race start amp:validate",
+    "test:ci": "npm install cypress bbc-a11y && run-p --race start cypress && run-p --race start bbcA11y",
     "test:e2e": "npm run killApp && npm run build && run-p --race start cypress",
-    "test:e2e:ci": "npm install cypress && run-p --race start cypress",
     "test:e2e:interactive": "npm run killApp && npm run build && run-p --race start cypress:interactive",
     "test:e2e:storybook": "npm run killStorybook && run-p --race storybook cypress:storybook",
     "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
