Update to npx and better name of script

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
       install: npm ci --only=production
       script:
         - npm run build
-        - xvfb-run npm run test:ci
+        - xvfb-run npm run test:prod:ci
     - stage: deploy
       if: type = push AND branch = latest
       before_script: npm install now --no-save
