--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
+    "react-lazy-load-image-component": "^1.1.1",
     "react-router-dom": "^4.3.1",
     "speculate": "^1.7.4",
     "styled-components": "^3.4.2",
