--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "BBC News",
   "short_name": "BBC News",
-  "Scope": "/",
+  "Scope": "/news/",
   "background_color": "#b80000",
   "display": "standalone",
-  "start_url": "/",
+  "start_url": "/news/",
   "theme_color": "#b80000",
   "icons": [
     {
