--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
   },
   "plugins": ["prettier", "json", "jsx-a11y"],
   "rules": {
-    "react/jsx-one-expression-per-line": "off"
+    "react/jsx-one-expression-per-line": "off",
+    "jsx-a11y/label-has-associated-control": "off",
   }
 }
