--- a/.travis.yml
+++ b/.travis.yml
@@ -9,30 +9,15 @@ jobs:
         - chmod +x ./cc-test-reporter
         - ./cc-test-reporter before-build
       script:
-<<<<<<< HEAD
-      #  - npm run test
-     
-      # after_script: ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
-    - stage: test
-      script: xvfb-run npm run test:e2e:ci
-    - stage: test
-      script: xvfb-run npm run test:e2e:storybook:ci
-    - stage: test
-      script: xvfb-run npm run test:a11y+lighthouse:ci
-
-    # - stage: test
-    #   install: npm install --production
-    #   script: npm run build
-=======
         - npm run test
         - ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
         - xvfb-run npm run test:e2e:storybook:ci
+        - xvfb-run npm run test:a11y+lighthouse:ci
     - stage: test
       install: npm ci --only=production
       script:
         - npm run build
         - xvfb-run npm run test:prod:ci
->>>>>>> latest
     - stage: deploy
       if: type = push AND branch = latest
       before_script: npm install now --no-save
