--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ jobs:
         - npm run test
         - ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
         - xvfb-run npm run test:e2e:storybook:ci
-        - xvfb-run npm run test:a11y+lighthouse:ci
+        - xvfb-run npm run test:a11y-tests-web:lighthouse:ci
+        - xvfb-run npm run test:a11y-tests-web:bbc-a11y:ci
     - stage: test
       install: npm ci --only=production
       script:
