--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "npm run test:lint && npm run test:unit && npm run dataValidate",
     "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
     "test:ampValidate": "npm run killApp && npm run build && run-p --race start amp:validate",
-    "test:prod:ci": "npm install --no-save cypress && run-p --race start cypress && run-p --race start bbcA11y",
+    "test:prod:ci": "npm install --no-save cypress && run-p --race start cypress",
     "test:e2e": "npm run killApp && npm run build && run-p --race start cypress",
     "test:e2e:interactive": "npm run killApp && npm run build && run-p --race start cypress:interactive",
     "test:e2e:storybook": "npm run killStorybook && run-p --race storybook cypress:storybook",
