--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "react-router-dom": "^4.3.1",
     "speculate": "^1.7.4",
     "styled-components": "^3.4.6",
-    "styled-normalize": "^8.0.0",
-    "wait-on": "^2.1.2"
+    "styled-normalize": "^8.0.0"
   },
   "devDependencies": {
     "@storybook/react": "4.0.0-alpha.8",
@@ -102,7 +101,8 @@
     "supertest": "^3.3.0",
     "swagger-cli": "^2.1.1",
     "webpack-bundle-analyzer": "^3.0.0",
-    "yaml-js": "^0.2.3"
+    "yaml-js": "^0.2.3",
+    "wait-on": "^3.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
