--- a/package.json
+++ b/package.json
@@ -100,9 +100,9 @@
     "stylelint-processor-styled-components": "^1.3.2",
     "supertest": "^3.3.0",
     "swagger-cli": "^2.1.1",
+    "wait-on": "^3.0.1",
     "webpack-bundle-analyzer": "^3.0.0",
-    "yaml-js": "^0.2.3",
-    "wait-on": "^3.0.1"
+    "yaml-js": "^0.2.3"
   },
   "jest": {
     "collectCoverageFrom": [
