--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-helmet": "^5.2.0",
+    "react-lazyload": "^2.3.0",
     "react-router-dom": "^4.3.1",
     "speculate": "^1.7.4",
     "styled-components": "^3.4.6",
