--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "react-router-dom": "^4.3.1",
     "speculate": "^1.7.4",
     "styled-components": "^4.0.0-beta.5",
-    "styled-normalize": "^8.0.0",
-    "wait-on": "^2.1.0"
+    "styled-normalize": "^8.0.0"
   },
   "devDependencies": {
     "@storybook/react": "4.0.0-alpha.8",
