--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "babel-loader": "^8.0.0",
     "bbc-a11y": "^2.2.5",
     "cypress": "^3.0.3",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^3.1.0",
@@ -114,7 +116,8 @@
       "!**/*.stories.jsx"
     ],
     "setupFiles": [
-      "./src/app/helpers/tests/jest-setup.js"
+      "./src/app/helpers/tests/jest-setup.js",
+      "./src/app/helpers/tests/enzymeSetup.js"
     ]
   }
 }
