--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "cypress": "^3.0.3",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^3.1.0",
@@ -118,6 +119,9 @@
     "setupFiles": [
       "./src/app/helpers/tests/jest-setup.js",
       "./src/app/helpers/tests/enzymeSetup.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
     ]
   }
 }
