--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,5 @@ npm-debug.log*
 build
 node_modules
 coverage
-reports/report.html
-reports/webpackBundleReport.html
-reports/webpackBundleReport.json 
+reports/*
+!reports/.gitkeep
