change the default base path to www.test; set dev base path to local host

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
     "test:ampValidate": "npm run killApp && npm run build && run-p --race start amp:validate",
     "test:prod:ci": "npm install --no-save cypress bbc-a11y && run-p --race start cypress && run-p --race start bbcA11y",
-    "test:e2e": "npm run killApp && npm run build && run-p --race start cypress",
-    "test:e2e:interactive": "npm run killApp && npm run build && run-p --race start cypress:interactive",
+    "test:e2e": "npm run killApp && RAZZLE_BASE_PATH=http://localhost:7080 npm run build && run-p --race start cypress",
+    "test:e2e:interactive": "npm run killApp && RAZZLE_BASE_PATH=http://localhost:7080 npm run build && run-p --race start cypress:interactive",
     "test:e2e:storybook": "npm run killStorybook && run-p --race storybook cypress:storybook",
     "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
     "test:e2e:storybook:interactive": "npm run killStorybook && run-p --race storybook cypress:storybook:interactive",
