--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=7080
-RAZZLE_BASE_PATH=http://localhost:7080
+RAZZLE_BASE_PATH=http://www.test.bbc.co.uk
 RAZZLE_PUBLIC_DIR=build/public
 RAZZLE_PUBLIC_DIR_DEV=public
