Removed the linebreak-style rule for eslint so the project is able to run on windows

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,5 +22,6 @@
   "rules": {
     "react/jsx-one-expression-per-line": "off",
     "jsx-a11y/label-has-associated-control": "off",
+    "linebreak-style": "off"
   }
 }
