--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "es6-promise": "^4.2.5",
     "express": "^4.16.3",
     "express-static-gzip": "^1.1.3",
+    "helmet": "^3.14.0",
     "isomorphic-fetch": "^2.2.1",
     "markdown-to-jsx": "^6.7.0",
     "nanoid": "^1.2.5",
