prepend local url with data/

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=7080
-RAZZLE_BASE_PATH=http://localhost:7080
+RAZZLE_BASE_PATH=http://localhost:7080/data
 RAZZLE_PUBLIC_DIR=build/public
 RAZZLE_PUBLIC_DIR_DEV=public
