More linting fixes

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "prop-types": "^15.6.2",
     "razzle": "2.4.0",
     "react": "^16.5.2",
+    "react-amp-document": "^0.1.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
