Move the dataValidate command before the unit tests
This is required because now the validator has logic to process.exit() the unit tests will hang and not timeout/error if the process is exited due to an validation error. By running the validator first this ensure no timeout will occur in the unit tests.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "speculate": "speculate",
     "start": "NODE_ENV=production node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "test": "npm run test:lint && npm run test:unit && npm run dataValidate",
+    "test": "npm run test:lint && npm run dataValidate && npm run test:unit",
     "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
     "test:ampValidate": "npm run killApp && npm run build && run-p --race start amp:validate",
     "test:prod:ci": "npm install --no-save cypress bbc-a11y && run-p --race start cypress && run-p --race start bbcA11y",
