--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "amp:validate": "wait-on http://localhost:7080/ && (amphtml-validator http://localhost:7080/news/articles/c9rpqy7pmypo.amp || true)",
     "bbcA11y": "bbc-a11y",
-    "build": "razzle build",
+    "build": "npm run webpack:prod:client && npm run webpack:prod:server",
     "cypress": "cypress run",
     "cypress:interactive": "cypress open",
     "cypress:storybook": "cypress run --project ./.storybook/.",
     "cypress:storybook:interactive": "cypress open --project ./.storybook/.",
     "dataValidate": "node src/app/dataValidator/index.js",
     "dataValidate:debug": "npm run dataValidate --DEBUG_MODE=true",
-    "dev": "razzle start",
+    "dev": "run-p webpack:dev:client webpack:dev:server",
     "killApp": "(lsof -t -i:7080 | xargs kill)",
     "killStorybook": "(lsof -t -i:9001 | xargs kill)",
     "lighthouse": "lighthouse http://localhost:7080/news/articles/c85pqyj5m2ko --output-path=./reports/report.html --view",
@@ -32,8 +32,12 @@
     "test:lighthouse": "npm run killApp && npm run build && run-p --race start lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:lint:css": "stylelint 'src/**/*.js' 'src/**/*.jsx'",
-    "test:unit": "razzle test --env=jsdom --coverage",
-    "updateSnapshots": "npm run test:unit -- -u"
+    "test:unit": "jest --env=jsdom --coverage",
+    "updateSnapshots": "npm run test:unit -- -u",
+    "webpack:prod:client": "webpack --config ./webpack/client/webpack.prod.js",
+    "webpack:prod:server": "webpack --config ./webpack/server/webpack.prod.js",
+    "webpack:dev:client": "webpack-dev-server --config ./webpack/client/webpack.dev.js",
+    "webpack:dev:server": "wait-on ./build/assets.json && webpack --config ./webpack/server/webpack.dev.js"
   },
   "husky": {
     "hooks": {
@@ -57,10 +61,16 @@
   },
   "homepage": "https://github.com/bbc-news/simorgh#readme",
   "dependencies": {
+    "assets-webpack-plugin": "^3.9.7",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-plugin-styled-components": "^1.7.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "brotli-webpack-plugin": "^1.0.0",
+    "clean-webpack-plugin": "^0.1.19",
     "compression": "^1.7.3",
     "compression-webpack-plugin": "^2.0.0",
     "es6-promise": "^4.2.5",
@@ -69,27 +79,31 @@
     "gnu-terry-pratchett": "0.0.2",
     "helmet": "^3.14.0",
     "isomorphic-fetch": "^2.2.1",
+    "jest": "^23.6.0",
     "markdown-to-jsx": "^6.7.0",
     "nanoid": "^1.2.5",
     "offline-plugin": "^5.0.5",
     "path-to-regexp": "^2.4.0",
     "prop-types": "^15.6.2",
-    "razzle": "2.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-universal-app": "^1.0.0",
     "speculate": "^1.7.4",
+    "start-server-webpack-plugin": "^2.2.5",
     "styled-components": "^3.4.9",
-    "styled-normalize": "^8.0.1"
+    "styled-normalize": "^8.0.1",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@storybook/react": "4.0.0-alpha.8",
     "amphtml-validator": "^1.0.23",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.0",
-    "babel-loader": "^8.0.0",
+    "babel-eslint": "^8.0.0",
     "bbc-a11y": "^2.2.5",
     "cypress": "^3.0.3",
     "eslint": "^5.6.0",
