--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "eslint-plugin-json": "^1.2.1",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "husky": "^1.0.0",
     "jest-fetch-mock": "^1.6.6",
     "jest-styled-components": "^6.2.1",
