Add axios module and use it for requesting the json file

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "homepage": "https://github.com/bbc-news/simorgh#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.7.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
