test "test:lighthouse:ci" script

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jobs:
         - npm run test
         - ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
         - xvfb-run npm run test:e2e:storybook:ci
+        - xvfb-run npm run test:lighthouse:ci
     - stage: test
       install: npm ci --only=production
       script:
