--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
     "test:e2e:storybook:interactive": "npm run killStorybook && run-p --race storybook cypress:storybook:interactive",
     "test:lighthouse": "npm run killApp && npm run build && run-p --race start lighthouse",
+    "test:lighthouse:ci": "node scripts/lighthouseRunner.js --accessibility=2 --seo=2 --best-practices=2 --pwa=2 --performance=2",
     "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:lint:css": "stylelint 'src/**/*.js' 'src/**/*.jsx'",
     "test:unit": "razzle test --env=jsdom --coverage",
@@ -102,7 +103,7 @@
     "husky": "^1.0.0",
     "jest-fetch-mock": "^1.6.6",
     "jest-styled-components": "^6.2.1",
-    "lighthouse": "^3.1.1",
+    "lighthouse": "^3.2.1",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
     "react-test-renderer": "^16.5.2",
