--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@ language: node_js
 before_install: npm install -g npm@6.4.1
 jobs:
   include:
-    # - stage: test
-    #   install: npm ci
-    #   before_script:
-    #     - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-    #     - chmod +x ./cc-test-reporter
-    #     - ./cc-test-reporter before-build
-    #   script:
-    #     - npm run test
-    #     - ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
-    #     - xvfb-run npm run test:e2e:storybook:ci
+    - stage: test
+      install: npm ci
+      before_script:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build
+      script:
+        - npm run test
+        - ./cc-test-reporter after-build -t lcov --debug --exit-code $TRAVIS_TEST_RESULT
+        - xvfb-run npm run test:e2e:storybook:ci
     - stage: test
       install: npm ci --only=production
       script:
