--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "brotli-webpack-plugin": "^1.0.0",
     "compression": "^1.7.3",
     "compression-webpack-plugin": "^2.0.0",
+    "dayjs": "^1.7.7",
     "es6-promise": "^4.2.5",
     "express": "^4.16.3",
     "express-static-gzip": "^1.1.3",
@@ -70,6 +71,7 @@
     "helmet": "^3.14.0",
     "isomorphic-fetch": "^2.2.1",
     "markdown-to-jsx": "^6.7.0",
+    "moment-timezone": "^0.5.23",
     "nanoid": "^1.2.5",
     "offline-plugin": "^5.0.5",
     "path-to-regexp": "^2.4.0",
