--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:e2e:storybook:ci": "run-p --race storybook cypress:storybook",
     "test:e2e:storybook:interactive": "npm run killStorybook && run-p --race storybook cypress:storybook:interactive",
     "test:lighthouse": "node scripts/lighthouseRunner.js --accessibility=2 --seo=0 --best-practices=0 --pwa=0 --performance=0",
-    "test:lighthouse:ci": "npm run build && run-p --race start test:lighthouse", 
+    "test:lighthouse:ci": "npm run build && run-p --race start test:lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:lint:css": "stylelint 'src/**/*.js' 'src/**/*.jsx'",
     "test:unit": "razzle test --env=jsdom --coverage",
@@ -92,6 +92,7 @@
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
     "bbc-a11y": "^2.2.5",
+    "chalk": "^2.4.1",
     "cypress": "^3.0.3",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.0.0",
