--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "**/scripts/*test.js",
+      "**/scripts/lighthouse/(index|runLighthouse).js",
       "**/src/**/*.{js,jsx}",
       "!**/src/app/helpers/tests/**",
       "!**/*.stories.jsx"
