convert Paragraph to examples convention

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "speculate": "speculate",
     "start": "NODE_ENV=production node build/server.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "test": "npm run test:lint && npm run dataValidate && npm run test:unit",
+    "test": "npm run test:lint && npm run dataValidate && npm run copyExamples && npm run test:unit",
     "test:accessibility": "npm run killApp && npm run build && run-p --race start bbcA11y",
     "test:ampValidate": "npm run killApp && npm run build && run-p --race start amp:validate",
     "test:prod:ci": "npm install --no-save cypress bbc-a11y && run-p --race start cypress && run-p --race start bbcA11y",
@@ -110,6 +110,7 @@
     "npm-run-all": "^4.1.3",
     "prettier": "^1.15.0",
     "react-test-renderer": "^16.6.0",
+    "require-context": "^1.1.0",
     "stylelint": "^9.7.1",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
