Using @bbc/psammead-figure component

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@bbc/psammead-brand": "^0.1.1",
     "@bbc/psammead-caption": "^0.1.0",
     "@bbc/psammead-copyright": "^0.2.0",
+    "@bbc/psammead-figure": "^0.1.0",
     "@bbc/psammead-headings": "^0.1.2",
     "@bbc/psammead-image-placeholder": "^0.1.0",
     "@bbc/psammead-inline-link": "^0.1.0",
