--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "bbc-a11y": "^2.2.5",
     "chalk": "^2.4.1",
