use dotenv to export ENV vars to process.env

--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "simorgh",
   "version": "0.0.1",
   "description": "Simorgh",
-  "main": "index.js",
   "scripts": {
     "amp:validate": "wait-on http://localhost:7080/ && (amphtml-validator http://localhost:7080/news/articles/c9rpqy7pmypo.amp || true)",
     "bbcA11y": "bbc-a11y",
-    "build": "export RAZZLE_BASE_PATH='http://localhost:7080' && webpack --env.production",
+    "build": "webpack --env.production",
     "cypress": "cypress run",
     "cypress:interactive": "cypress open",
     "cypress:storybook": "cypress run --project ./.storybook/.",
     "cypress:storybook:interactive": "cypress open --project ./.storybook/.",
     "dataValidate": "node src/app/dataValidator/index.js",
     "dataValidate:debug": "npm run dataValidate --DEBUG_MODE=true",
-    "dev": "export RAZZLE_BASE_PATH='http://localhost:7080' && webpack",
+    "dev": "webpack",
     "killApp": "(lsof -t -i:7080 | xargs kill)",
     "killStorybook": "(lsof -t -i:9001 | xargs kill)",
     "lighthouse": "lighthouse http://localhost:7080/news/articles/c85pqyj5m2ko --output-path=./reports/report.html --view",
@@ -33,7 +32,7 @@
     "test:lighthouse:ci": "npm run build && run-p --race start test:lighthouse",
     "test:lint": "eslint --ext .js,jsx,json ./src ./scripts/lighthouse ./data ./cypress ./.storybook && swagger-cli validate data/schema.yaml",
     "test:lint:css": "stylelint 'src/**/*.js' 'src/**/*.jsx'",
-    "test:unit": "export RAZZLE_PUBLIC_DIR_DEV='public' && jest --env=jsdom --coverage",
+    "test:unit": "jest --env=jsdom --coverage",
     "updateSnapshots": "npm run test:unit -- -u"
   },
   "husky": {
@@ -108,6 +107,7 @@
     "chrome-launcher": "^0.10.5",
     "core-js": "^2.6.0",
     "cypress": "^3.1.1",
+    "dotenv": "^6.2.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^3.3.0",
