--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=7080
-RAZZLE_BASE_PATH=http://localhost:7080
-RAZZLE_PUBLIC_DIR=build/public
-RAZZLE_PUBLIC_DIR_DEV=public
+BASE_URL=http://localhost:7080
+PUBLIC_DIR=build/public
+PUBLIC_DIR_DEV=public
